--- a/robo-edu/about.html
+++ b/robo-edu/about.html
@@ -33,7 +33,7 @@
         <!--header-->
         <header class="header navbar-fixed-top">
             <nav class="container">
-                <a href="/front1.html"><img class="logo-img" src="resources/logo2.png" alt="Asentus Logo"></a>
+                <a href="/index.html"><img class="logo-img" src="resources/logo2.png" alt="Asentus Logo"></a>
             
                 <div class="navbar-right">
                     <a href="#home"><i class="fa-solid fa-house"></i> home</a>
